simulation improvements. gdbserver in docker

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,16 +15,16 @@
             "name": "INDIflight MOCKUP",
             "type": "cppdbg",
             "request": "launch",
-            "program": "/home/tmblaha/.venv/bin/python3",
+            "program": "${userHome}/.venv/bin/python3",
             //"args": ["--eval-command='run ${workspaceFolder}/mockup.py'"],
             "args": [
                 "${workspaceFolder}/Simulation/exampleQuadSim.py",
                 "--sil",
-                "${workspaceFolder}/external/indiflight/obj/main/indiflight_MOCKUP.so",
+                "/mnt/data/Work/Tools/indiflight2/obj/main/indiflight_MOCKUP.so",
                 "--sil-profile-txt",
-                "${workspaceFolder}/Simulation/exampleINDIflightProfile.txt",
-                "--throw",
-                "--learn",
+                "${workspaceFolder}/Simulation/config/exampleINDIflightProfile.txt",
+                //"--throw",
+                //"--learn",
                 "--sil-log"
                 //"--no-viz",
             ],
