--- a/Groundstation/Cross-Compiler/Dockerfile.pi.cross
+++ b/Groundstation/Cross-Compiler/Dockerfile.pi.cross
@@ -65,10 +65,10 @@ RUN echo "set(CMAKE_SYSTEM_NAME Linux)" >> $CROSS_TOOLCHAIN && \
 # good faith.
 # https://stackoverflow.com/questions/10599038/can-i-skip-cmake-compiler-tests-or-avoid-error-unrecognized-option-rdynamic#comment86573469_30642130
 
-# remote config
-ENV REMOTE_IP=10.0.0.1
-ENV REMOTE_USER=pi
-ENV REMOTE_PASSWORD=pi
+# remote config. NOTE: will be done at runtime now by passing an .env file
+#ENV REMOTE_IP=10.0.0.1
+#ENV REMOTE_USER=pi
+#ENV REMOTE_PASSWORD=pi
 
 # entry point config
 ADD --chmod=755 build.sh /build.sh
