--- a/remotes/Orin1.env
+++ b/remotes/Orin1.env
@@ -1,6 +1,6 @@
 # NO SPACES BEFORE AND AFTER THE '='
 # NO quotation marks and no spaces in the variables
-REMOTE_NAME=Dummy1
-REMOTE_IP=172.27.0.101
-REMOTE_USER=pi
-REMOTE_PASSWORD=pi
+REMOTE_NAME=Orin1
+REMOTE_IP=172.27.0.201
+REMOTE_USER=droneracing
+REMOTE_PASSWORD=dr
